@@ -23,8 +23,8 @@ dependencies {
     compile 'org.apache.commons:commons-dbcp2:2.7.0'
     compile 'commons-net:commons-net:3.6'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.springframework:spring-beans:5.1.12.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.12.RELEASE'
+    compile 'org.springframework:spring-beans:5.2.0.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.2.0.RELEASE'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
